--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "Weekly Schedule Manager",
   "short_name": "Schedule",
   "description": "Your personal weekly schedule manager with smart features",
-  "start_url": "/index.html",
+  "start_url": "./",
   "display": "standalone",
   "background_color": "#667eea",
   "theme_color": "#667eea",
