--- a/manifest.json
+++ b/manifest.json
@@ -9,13 +9,13 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "./icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/icon-512.png",
+      "src": "./icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
@@ -27,8 +27,8 @@
       "name": "Today's Schedule",
       "short_name": "Today",
       "description": "View today's schedule",
-      "url": "/index.html",
-      "icons": [{ "src": "/icon-192.png", "sizes": "192x192" }]
+      "url": "./index.html",
+      "icons": [{ "src": "./icon-192.png", "sizes": "192x192" }]
     }
   ]
 }
