--- a/manifest.json
+++ b/manifest.json
@@ -9,13 +9,13 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "./icon-192-?v=2.0.png",
+      "src": "./icon-192-v2.0.0.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "./icon-512-?v=2.0.png",
+      "src": "./icon-512-v2.0.0.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
@@ -28,7 +28,7 @@
       "short_name": "Today",
       "description": "View today's schedule",
       "url": "./index.html",
-      "icons": [{ "src": "./icon-192.png", "sizes": "192x192" }]
+      "icons": [{ "src": "./icon-192-v2.0.0.png", "sizes": "192x192" }]
     }
   ]
 }
